2025-09-18T12:51:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17829245360 # 1230
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-18
* notice: last 14d: unq all: 12 22
* notice: prev accum: outdated-unq outdated-all / unq all: 1199 5874 / 1213 5905
* notice: next accum: outdated-unq outdated-all / unq all: 1201 5883 / 1213 5905
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-09-04] / []

2025-09-18T01:53:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17815594456 # 1229
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-18
* notice: last 14d: unq all: 14 31
* notice: prev accum: outdated-unq outdated-all / unq all: 1199 5874 / 1212 5904
* notice: next accum: outdated-unq outdated-all / unq all: 1199 5874 / 1213 5905
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-09-17]

2025-09-17T12:52:52Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17798229103 # 1228
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-17
* notice: last 14d: unq all: 13 30
* notice: prev accum: outdated-unq outdated-all / unq all: 1198 5870 / 1212 5904
* notice: next accum: outdated-unq outdated-all / unq all: 1199 5874 / 1212 5904
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-09-03] / []

2025-09-17T01:53:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17784200948 # 1227