@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-18T12:51:45Z",
-  "count_outdated" : 5883,
-  "uniques_outdated" : 1201,
+  "timestamp" : "2025-09-20T01:51:16Z",
+  "count_outdated" : 5889,
+  "uniques_outdated" : 1203,
   "count" : 5905,
   "uniques" : 1213,
   "views" : [
-    {
-      "timestamp": "2025-09-05T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 1, 6 ],
-      "count_decinc": [ 0, 6 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-09-06T00:00:00Z",
       "count": 1,
