@@ -1,12 +1,7 @@
 {
-  "count": 22,
-  "uniques": 12,
+  "count": 16,
+  "uniques": 10,
   "views": [
-    {
-      "timestamp": "2025-09-05T00:00:00Z",
-      "count": 6,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-09-06T00:00:00Z",
       "count": 1,
